# mcp-gateway-graph-demo

./: .env.example  CLAUDE.md  README.md  config.py  main.py  mcp_tools.json  mock_api_spec.json  pyproject.toml  setup.cfg
discovery/: __init__.py  graph.py  helpers.py  nodes.py  runners.py
generation/: __init__.py  graph.py  helpers.py  nodes.py  runners.py
models/: __init__.py  schemas.py
utils/: __init__.py  tools.py  workflow.py
