[project]
name = "mcp-gateway-graph-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.1",
    "beautifulsoup4>=4.14.2",
    "black>=25.9.0",
    "click>=8.1.0",
    "debugpy>=1.8.17",
    "dotenv>=0.9.9",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "jsonschema>=4.25.1",
    "langchain>=1.0.2",
    "langchain-core>=1.0.1",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.1",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langsmith>=0.4.38",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]
