[project]
name = "mcp-gateway-graph-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.1",
    "beautifulsoup4>=4.14.2",
    "click>=8.1.0",
    "debugpy>=1.8.17",
    "dotenv>=0.9.9",
    "jsonschema>=4.25.1",
    "langchain>=1.0.2",
    "langchain-core>=1.0.1",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.1",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langsmith>=0.4.38",
    "pyyaml>=6.0.3",
    "questionary>=2.1.0",
    "requests>=2.32.5",
    "ruff>=0.14.3",
]

[tool.ruff]
line-length = 100
exclude = [".venv", ".git", "__pycache__", "notebooks", "alembic"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["config", "models", "discovery", "generation", "utils", "tests"]
force-single-line = false
lines-after-imports = 2
